Add functionality to calculator.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <div class = 'frame'>
         <div class = 'topFrame'>
             <div class = 'solar'>
-                <div class = 'brand'>MAYDAY456</div>
+                <div class = 'brand'>MAYDAYfx456</div>
                 <div class = 'solarBar'>
                     <div class ='box'></div>
                     <div class ='box'></div>
                     <div class ='box'></div>
                 </div>
             </div>
-            <div class = 'screen'>12345</div>
+            <div class = 'fullScreen'>
+                <div class = 'ouch'></div>
+                <div class = 'screen'></div>
+            </div>
+            
         </div>
         <div class = 'buttons'>
             <div class = 'button number seven'>7</div>
@@ -35,9 +39,13 @@
             <div class = 'button number three'>3</div>
             <div class = 'button sign subtract'>-</div>
             <div class = 'button number zero'>0</div>
-            <div class = 'button clear'>AC</div>
             <div class = 'button sign add'>+</div>
+            <div class = 'button sign deci'>.</div>
+            <div class = 'button backSpace'>&lt;--</div>
+            <div class = 'button clear'>AC</div>
             <div class = 'button equals'>=</div>
+            
+
         </div>
     </div>
 </body>
