Update blinker tech.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class = 'fullScreen'>
                 <div class = 'ouch'></div>
                 <div class = 'screen'></div>
+                <div class = 'blinker'></div>
             </div>
             
         </div>
