Add keyboard functionality.

--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
             
         </div>
         <div class = 'buttons'>
-            <div class = 'button number seven'>7</div>
-            <div class = 'button number eight'>8</div>
-            <div class = 'button number nine'>9</div>
-            <div class = 'button sign divide'>/</div>
-            <div class = 'button number four'>4</div>
-            <div class = 'button number five'>5</div>
-            <div class = 'button number six'>6</div>
-            <div class = 'button sign multiply'>x</div>
-            <div class = 'button number one'>1</div>
-            <div class = 'button number two'>2</div>
-            <div class = 'button number three'>3</div>
-            <div class = 'button sign subtract'>-</div>
-            <div class = 'button number zero'>0</div>
-            <div class = 'button sign add'>+</div>
-            <div class = 'button sign deci'>.</div>
-            <div class = 'button backSpace'>&lt;--</div>
-            <div class = 'button clear'>AC</div>
-            <div class = 'button equals'>=</div>
+            <div data-key="55" class = 'button number seven'>7</div>
+            <div data-key="56" class = 'button number eight'>8</div>
+            <div data-key="57" class = 'button number nine'>9</div>
+            <div data-key="191" class = 'button sign divide'>/</div>
+            <div data-key="52" class = 'button number four'>4</div>
+            <div data-key="53" class = 'button number five'>5</div>
+            <div data-key="54" class = 'button number six'>6</div>
+            <div data-key="56" class = 'button sign multiply'>*</div>
+            <div data-key="49" class = 'button number one'>1</div>
+            <div data-key="50" class = 'button number two'>2</div>
+            <div data-key="51" class = 'button number three'>3</div>
+            <div data-key="189" class = 'button sign subtract'>-</div>
+            <div data-key="48" class = 'button number zero'>0</div>
+            <div data-key="187" class = 'button sign add'>+</div>
+            <div data-key='190' class = 'button sign deci'>.</div>
+            <div data-key="8" class = 'button backSpace'>&lt;--</div>
+            <div data-key='27' class = 'button clear'>AC</div>
+            <div data-key='13' class = 'button equals'>=</div>
             
 
         </div>
